--- a/src/main/resources/static/css/account/accountList.css
+++ b/src/main/resources/static/css/account/accountList.css
@@ -50,16 +50,44 @@
     /* border-bottom: 1px solid #878784; */
     box-sizing: border-box;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     padding-bottom: 10px;
 }
 
+/* 등록 버튼 */
 .insertBtn{
     border: 1px solid #000000;
     width: 50px;
     text-align: center;
     box-sizing: border-box;
     border-radius: 2px;
+}
+
+.insertBtn1 {
+    display: flex;
+}
+
+/* 검색 영역 */
+.searchBtn {
+    display: flex;
+    gap: 3px;
+    height: 23.2px;
+}
+
+#search{
+    text-indent: 3px;
+}
+
+/* 검색 버튼 */
+.search_1{
+    background-image :url(../../img/account/search.png);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    border: none;
+    cursor: pointer;
+    right: 7%;
+    top: 27.8%;
 }
 
 /* 리스트 영역 */
