--- a/src/main/resources/static/css/account/accountList.css
+++ b/src/main/resources/static/css/account/accountList.css
@@ -86,8 +86,8 @@
     height: 15px;
     border: none;
     cursor: pointer;
-    right: 7%;
-    top: 27.8%;
+    right: 5.6vw;
+    top: 20.5vh;
 }
 
 /* 리스트 영역 */
