--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -115,8 +115,8 @@
                             <input type="file" th:field="*{profileImg}">
                         </li>
                         <li class="s2">
-                            <input type="submit" value="회원가입">
-                            <button><a th:href="@{/login}">로그인</a></button>
+                            <input class="btn" type="submit" value="회원가입">
+                            <button class="btn"><a th:href="@{/login}">로그인</a></button>
                         </li>
                     </ul>
                 </div>
