--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -17,11 +17,34 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 10px;
   background-color: #00000080;
   text-shadow: 1px 1px 2px black;
   color: white;
+}
+
+input{
+  text-indent: 3px;
+}
+
+.wrap .join h1{
+  text-align: center;
+}
+
+li{
+  padding-top: 12px;
+}
+
+.btn{
+  background-color: white;
+  color: black;
+  padding: 5px;
+}
+
+.s2{
+  display: flex;
+  justify-content: center;
+  gap: 15px;
 }
 
 .error{
