--- a/src/main/resources/static/css/common/leftMenu.css
+++ b/src/main/resources/static/css/common/leftMenu.css
@@ -129,3 +129,209 @@
   justify-content: center;
   gap: 5px;
 }
+
+/* 챗봇***************************************/
+.bot-con{
+  width:100%;
+  height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat-bot .wrap{
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.chat-bot .wrap img{
+  width: inherit;
+  height: inherit;
+}
+
+.chat-bot .wrap button{
+	color:#ffffff;
+  padding: 3px;
+  border: none; background-color: #000000;
+  cursor: pointer;
+  border-radius: 5px;
+  }
+
+  .chat-bot .wrap button .btn-chat-open{
+	color:#ffffff;
+  border: none; background-color: #000000;
+  cursor: pointer;
+  padding:5px 15px !important;
+  border-radius: 5px;
+  }
+
+.chat-bot .wrap #chat-disp{
+  background-color: #edf3f7;
+  width: 360px;
+  max-height: 81vh;
+  height: auto;
+  border-radius: 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  box-shadow: 0 0 30px 0 rgb(0 0 0 / 30%);
+  padding: 15px;
+  z-index: 999;
+}
+
+.chat-content{
+  padding: 15px;
+  line-height: 1.8em;
+  overflow-y: auto;
+  max-height: 640px;
+}
+
+#chat-header{
+	position:relative;
+	text-align: center;
+	background-color: #4368ef;
+	color: #fff;
+	height: 60px;
+	line-height: 60px;
+}
+
+#chat-header .btn-wrap{
+  position: absolute;
+  display:block;
+  width: 30px;
+  height: 30px;
+  top:15px;
+  right:15px;
+  line-height: 30px;
+}
+
+#chat-header .btn-wrap button{
+  width: 100%;
+  height: 100%;
+}
+
+
+#chat-disp{
+	position: relative;
+}
+
+/* 채팅채팅 사이 간격 */
+#chat-disp .msg{
+	margin-bottom: 15px;
+}
+
+#chat-disp .msg .icon{
+	margin-right: 10px;
+}
+
+#chat-disp .msg .icon img{
+	width: 30px;
+	height: 30px;
+}
+
+/* 날짜 */
+#chat-disp .date{
+	margin-bottom: 5px;
+	color: #777;
+	font-size: 12px;
+  padding: 10px 0;
+  text-align: center;
+}
+
+/* 시간 */
+#chat-disp .time{
+	margin-bottom: 5px;
+	color: #777;
+	font-size: 12px;
+}
+
+#chat-disp .user .time{
+	text-align: right;
+}
+
+#chat-disp .part{
+	background-color: #fff;
+	color: #222;
+	max-width:270px;
+	padding: 6px 20px 6px 10px;
+	text-align: left;
+	letter-spacing: -0.5px;
+	margin-bottom: 5px;
+	border-radius: 5px;
+	box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
+}
+
+
+#chat-disp .menu .menu-item{
+	width: 100%;
+	padding: 10px 0;
+	text-align: center;
+	background-color:  rgb(0 255 255 / 5%);
+	border: 1px solid #e5e5e5;
+}
+
+#chat-question{
+  background-color: #edf3f7;
+  padding: 10px 0;
+  padding-top: 15px;
+  font-weight: bold;
+  border: none;
+  border-top: 1px solid #8080806b;
+  gap: 10px;
+  display: flex;
+}
+
+#chat-question input{
+	flex: 1;
+    border: none;
+    height: 24px;
+    border-radius: 12px;
+    padding: 5px;
+    box-shadow: rgb(48 52 65 / 5%) 0px 0px 20px 5px;
+}
+
+#chat-question span{
+	width: 40px;
+	height: 40px;
+	background: url("/img/icon/question.svg") no-repeat 50%/contain;
+}
+
+#chat-question button{
+	width: 40px;
+	border: 1px solid #e9e9e9;
+	background-color:  rgb(0 255 255 / 5%);
+	cursor: pointer;
+}
+
+#chat-content{
+    height: 500px;
+    overflow: auto;
+	min-height: 670px;
+}
+
+#chat-content #userMsgBox{
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#chat-content #userMsgBox .message{
+  border-radius: 18px;
+  background-color: white;
+  box-shadow: rgb(48 52 65 / 5%) 0px 0px 20px 5px;
+  max-width: 270px;
+  padding: 10px;
+}
+
+#chat-content .bot .message{
+	border-radius: 18px;
+  background-color: white;
+  box-shadow: rgb(48 52 65 / 5%) 0px 0px 20px 5px;
+  max-width: 270px;
+  padding: 10px;
+}
