--- a/src/main/resources/static/css/board/boardPage.css
+++ b/src/main/resources/static/css/board/boardPage.css
@@ -95,6 +95,27 @@
 }
 
 
+.right-menu .right-con .boardzone .nav {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 90px;
+  padding-right: 90px;
+}
+
+.right-menu .right-con .boardzone .search select#type {
+  background: gainsboro;
+  color: black;
+  width: 100px;
+  padding: 5px;
+  line-height: 1;
+  border: 0;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.right-menu .right-con .boardzone .page .paging a>span{
+  padding: 5px;
+}
+
 
 
 
