--- a/src/main/resources/static/css/notice/noticePage.css
+++ b/src/main/resources/static/css/notice/noticePage.css
@@ -93,3 +93,24 @@
   background-color: #000000;
   color: #ffffff;
 }
+
+.right-menu .right-con .noticePage .nav {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+.right-menu .right-con .noticePage .search select#type {
+  background: gainsboro;
+  color: black;
+  width: 100px;
+  padding: 5px;
+  line-height: 1;
+  border: 0;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.right-menu .right-con .noticePage .page .paging a>span{
+  padding: 5px;
+}
