--- a/src/main/resources/templates/board/boardPage.html
+++ b/src/main/resources/templates/board/boardPage.html
@@ -16,18 +16,6 @@
             <div class="right-con">
                 <div class="boardzone">
                         <h2>커뮤니티 게시판</h2>
-                    <div class="search">
-                        <form th:action="@{/board/boardSearch}" method="get">
-                            <select name="type" id="type">
-                                <option value="" selected>::검색기준::</option>
-                                <option value="boardId">게시글번호</option>
-                                <option value="boardTitle">게시글제목</option>
-                                <option value="boardContent">게시글내용</option>
-                            </select>
-                            <input type="text" name="search" id="search">
-                            <input type="submit" value="검색" class="button1">
-                        </form>
-                    </div>
                     <table>
                         <thead>
                             <tr>
@@ -60,17 +48,38 @@
 
                     </table>
                     <div class="nav">
-
+                        <div class="search">
+                            <form th:action="@{/board/boardSearch}" method="get">
+                                <select name="type" id="type">
+                                    <option value="" selected>::검색기준::</option>
+                                    <option value="boardId">게시글번호</option>
+                                    <option value="boardTitle">게시글제목</option>
+                                    <option value="boardContent">게시글내용</option>
+                                </select>
+                                <input type="text" name="search" id="search">
+                                <input type="submit" value="검색" class="button1">
+                            </form>
+                        </div>
                         <div class="page">
                             <div class="paging">
-                                <a th:href="${boardList.first} ? '#' : @{/board/boardList(page=${boardList.number-1})}">이전</a>
+                                <a th:href="${boardList.first} ? '#' : @{/board/boardList(page=${boardList.number-2})}">
+                                    <span> 《 </span>
+                                </a>
+                                <a th:href="${boardList.first} ? '#' : @{/board/boardList(page=${boardList.number-1})}">
+                                    <span>〈 </span>
+                                </a>
                                 <th:block th:each="page : ${#numbers.sequence(startPage,endPage)}">
                                     <span th:if="${page == nowPage}" th:text="${page}" style="background-color: yellow;"></span>
                                     <span th:unless="${page == nowPage}">
                                     <a th:href="@{/board/boardList(page=${page-1})}" th:text="${page}"></a>
                                 </span>
                                 </th:block>
-                                <a th:href="${boardList.last} ? '#' : @{/board/boardList(page=${boardList.number+1})}">다음</a>
+                                <a th:href="${boardList.last} ? '#' : @{/board/boardList(page=${boardList.number+1})}">
+                                    <span> 〉</span>
+                                </a>
+                                <a th:href="${boardList.last} ? '#' : @{/board/boardList(page=${boardList.number+2})}">
+                                    <span> 》</span>
+                                </a>
                             </div>
                         </div>
                     </div>
