게시판 공지사항 상세페이지 및 추가,수정 페이지 CSS 수정

--- a/src/main/resources/static/css/notice/noticePage.css
+++ b/src/main/resources/static/css/notice/noticePage.css
@@ -59,6 +59,7 @@
   text-align: center;
   /* padding: 10px; */
   margin: auto;
+  margin-top: 20px;
   line-height: 190%;
   border-bottom: 1px solid black;
   border-collapse: collapse;
