--- a/src/main/resources/static/css/notice/noticeDetail.css
+++ b/src/main/resources/static/css/notice/noticeDetail.css
@@ -107,3 +107,12 @@
   font-size: 20px;
 }
 
+textarea{
+  resize: none;
+  overflow-y: auto;
+  font-size: large;
+  width: 100%;
+  height: 20%;
+  font-weight: 300;
+}
+
