--- a/src/main/resources/static/css/notice/noticeInsert.css
+++ b/src/main/resources/static/css/notice/noticeInsert.css
@@ -125,3 +125,12 @@
   transition: all 0.3s;
   font-size: 20px;
 }
+
+textarea{
+  resize: none;
+  overflow-y: auto;
+  font-size: large;
+  width: 100%;
+  height: 20%;
+  font-weight: 300;
+}
