--- a/src/main/resources/static/css/notice/noticeUpdate.css
+++ b/src/main/resources/static/css/notice/noticeUpdate.css
@@ -117,3 +117,12 @@ display: block;
   transition: all 0.3s;
   font-size: 20px;
 }
+
+textarea{
+  resize: none;
+  overflow-y: auto;
+  font-size: large;
+  width: 100%;
+  height: 20%;
+  font-weight: 300;
+}
