--- a/src/main/resources/templates/naver/auth2.html
+++ b/src/main/resources/templates/naver/auth2.html
@@ -15,6 +15,17 @@
 
   </script>
   <style>
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
 .naver-group{
 	width:100%;
 	height:100vh;
@@ -25,10 +36,10 @@
 .parent-node,
 .group{
 	position: relative;
-	margin-left: 12px;
+	margin-left: 9px;
 }
 .tree-node{
-	padding-left: 12px;
+	padding-left: 20px;
 	position: relative;
 }
 .node a{
@@ -36,7 +47,7 @@
 	height: 54px;
 	line-height: 54px;
 	padding-left: 24px;
-	background: url("/images/minus.svg") no-repeat left center;
+	background: url("/img/group.png") no-repeat left center;
 
 	background-size: 20px;
 }
@@ -47,10 +58,10 @@
     top: 1.7em;
     bottom: 1px;
     z-index: 2;
-    width: 12px;
+    width: 15px;
     height: 0;
     margin-top: -1px;
-    border-top: 1px solid #222;
+    border-top: 2px solid #222;
 }
 .group:before{
     content: '';
@@ -61,7 +72,7 @@
     bottom: 1px;
     z-index: -1;
     width: 0;
-    border-left: 1px solid #222;
+    border-left: 3px solid #222;
 }
 
   </style>
