--- a/src/main/resources/templates/fragment/common/adminHeader.html
+++ b/src/main/resources/templates/fragment/common/adminHeader.html
@@ -9,7 +9,9 @@
   </div>
     <div class="gnb">
       <ul>
-        <li><a href="#">Menu1</a></li>
+        <li>
+          <a th:href="@{/movie/todaymovie}">영화 API</a>
+        </li>
         <li>
           <a href="#">Menu2</a>
         </li>
