--- a/src/main/resources/templates/movie/todaymovie.html
+++ b/src/main/resources/templates/movie/todaymovie.html
@@ -53,7 +53,7 @@
     .popup {
       width: 0;
       height: 0;
-      background-color: rgba(131, 136, 132, 0.582);
+      background-color: rgb(6 6 6 / 83%);
       position: fixed;
       left: 50%;
       right: 50%;
@@ -66,7 +66,8 @@
     }
 
     .popup-ani {
-
+      color: white;
+      text-shadow: 1px 1px 2px black;
       width: 70%;
       height: 70vh;
       left: 30vh;
