--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 풀캘린더 -->
     <script th:src="@{/js/indexCallender.js}" defer></script>
+    <script th:src="@{/js/youtube.js}" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/index.global.min.js'></script>
     
@@ -108,7 +109,15 @@
                                 </a>
                             </div>
                         </div>
+                        </div>
+                    <div class="youtube">
+                        <h2>영상</h2>
+                        <div class="youtube-con">
+
+                        </div>
                     </div>
+                </div>
+
                 </div>
             </div>
         </div>
