날씨 api 검색 ㅅ추가

--- a/src/main/resources/static/css/common/leftMenu.css
+++ b/src/main/resources/static/css/common/leftMenu.css
@@ -130,6 +130,16 @@
   gap: 5px;
 }
 
+.weather .search{
+  display: flex;
+  gap: 10px;
+}
+
+.weather .search input{
+  cursor: pointer;
+  padding: 0 5px;
+}
+
 /* 챗봇***************************************/
 .bot-con{
   width:100%;
