--- a/src/main/resources/templates/admin/adminNoticeList.html
+++ b/src/main/resources/templates/admin/adminNoticeList.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>adminNoticeList</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/admin/adminNoticeList.css}">
 
 </head>
