--- a/src/main/resources/templates/approval/listDetail.html
+++ b/src/main/resources/templates/approval/listDetail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>결재 리스트</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/approval/listDetail.css}">
 </head>
 
