--- a/src/main/resources/templates/approval/listUpdate.html
+++ b/src/main/resources/templates/approval/listUpdate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>결재문서 수정</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/approval/listUpdate.css}">
 </head>
 
