--- a/src/main/resources/templates/approval/write.html
+++ b/src/main/resources/templates/approval/write.html
@@ -2,7 +2,7 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>문서작성</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/approval/write.css}">
 </head>
 <body>
