--- a/src/main/resources/templates/calendar/memberSchedule/memberCalendar.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberCalendar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>개인일정</title>
+  <title>KICKOFF</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/index.global.min.js'></script>
   <!-- bootstrap 4 , 직접 할 경우 생략-->
