--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -34,7 +34,9 @@
                     <div class="search">
                         <select name="city" id="city">
                             <option value="seoul">서울</option>
+                            <option value="incheon">인천</option>
                             <option value="chuncheon">춘천</option>
+                            <option value="Gangneung">강릉</option>
                             <option value="daejeon">대전</option>
                             <option value="gwangju">광주</option>
                             <option value="busan">부산</option>
