--- a/src/main/resources/templates/movie/weekendmovie.html
+++ b/src/main/resources/templates/movie/weekendmovie.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Kobis API</title>
+  <title>KICKOFF</title>
   <link rel="stylesheet" th:href="@{/css/calendar/attend/attend.css}">
 
   <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>-->
