--- a/src/main/resources/templates/naver/auth2.html
+++ b/src/main/resources/templates/naver/auth2.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Insert title here</title>
+  <title>KICKOFF</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script>
 	$(function(){
