--- a/src/main/resources/templates/account/accountDetail.html
+++ b/src/main/resources/templates/account/accountDetail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail</title>
+    <title>KICKOFF</title>
     <script th:src="@{/js/account/accountDetail.js}" defer></script>
     <link rel="stylesheet" th:href="@{/css/account/accountDetail.css}">
 </head>
