--- a/src/main/resources/templates/board/BoardInsert.html
+++ b/src/main/resources/templates/board/BoardInsert.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>footballAdmin</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/board/BoardInsert.css}">
 </head>
 
