--- a/src/main/resources/templates/board/BoardUpdate.html
+++ b/src/main/resources/templates/board/BoardUpdate.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>footballAdmin</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/board/BoardUpdate.css}">
 </head>
 
