--- a/src/main/resources/templates/calendar/attend/allAttendPaging.html
+++ b/src/main/resources/templates/calendar/attend/allAttendPaging.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/calendar/attend/allAttendPaging.css}">
 
 </head>
