--- a/src/main/resources/templates/management/org.html
+++ b/src/main/resources/templates/management/org.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>조직 관리</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" href="@{/css/management/org.css}">
 </head>
 <body>
