--- a/src/main/resources/templates/member/adminMemberDetail.html
+++ b/src/main/resources/templates/member/adminMemberDetail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>adminMemberDetail</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/member/adminMemberDetail.css}">
 </head>
 
