--- a/src/main/resources/templates/member/deptVp.html
+++ b/src/main/resources/templates/member/deptVp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>조직 관리</title>
+  <title>KICKOFF</title>
   <link rel="stylesheet" th:href="@{/css/member/deptCp.css}">
 </head>
 
