--- a/src/main/resources/templates/member/memberUpdate.html
+++ b/src/main/resources/templates/member/memberUpdate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>memberUpdate</title>
+    <title>KICKOFF</title>
     <script th:src="@{/js/telCheck.js}" defer></script>
     <link rel="stylesheet" th:href="@{/css/member/memberUpdate.css}">
     <!-- 주소 API -->
