--- a/src/main/resources/templates/notice/noticeInsert.html
+++ b/src/main/resources/templates/notice/noticeInsert.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>공지사항</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/notice/noticeInsert.css}">
 </head>
 <body>
