--- a/src/main/resources/templates/notice/noticePage.html
+++ b/src/main/resources/templates/notice/noticePage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>공지사항</title>
+    <title>KICKOFF</title>
     <link rel="stylesheet" th:href="@{/css/notice/noticePage.css}">
 </head>
 
