--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -163,7 +163,7 @@
                                     <a th:href="@{/movie/todaymovie}">영화 API</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{#}">버스 API</a>
+                                    <a th:href="@{/bus/index}">버스 API</a>
                                 </li>
                             </ul>
                         </li>
