--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -36,7 +36,6 @@
                             <option value="seoul">서울</option>
                             <option value="incheon">인천</option>
                             <option value="chuncheon">춘천</option>
-                            <option value="Gangneung">강릉</option>
                             <option value="daejeon">대전</option>
                             <option value="gwangju">광주</option>
                             <option value="busan">부산</option>
@@ -163,7 +162,7 @@
                                     <a th:href="@{/movie/todaymovie}">영화 API</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{/bus/index}">버스 API</a>
+                                    <a th:href="@{#}">버스 API</a>
                                 </li>
                             </ul>
                         </li>
