버스api 페이지 이동

--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -162,7 +162,7 @@
                                     <a th:href="@{/movie/todaymovie}">영화 API</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{#}">버스 API</a>
+                                    <a th:href="@{/bus/index}">버스 API</a>
                                 </li>
                             </ul>
                         </li>
