--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <body>
     <div class="wrap">
         <div class="login">
-            <h1>Sign In</h1>
+            <h1>로그인</h1>
             <form th:action="loginOk" method="post" >
                 <div class="login-form">
                     <ul>
